# ST_Chat_LnagChain

./: README.md  pyproject.toml
llm-interface-react/: package.json
llm-server/: pyproject.toml
llm-server/src/llm_server/: main.py  simple_agent.py
