[tool.poetry]
name = "st-chat"
version = "0.1.0"
description = "test"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "st_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
gunicorn = "^21.0.1"
langchain = "^0.0.235"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
