[tool.poetry]
name = "llm-server"
version = "0.1.0"
description = ""
authors = ["TayamaYuto <tayama.yuto@icloud.com>"]
readme = "README.md"
packages = [{include = "llm_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
