[tool.poetry]
name = "llm-server"
version = "0.1.0"
description = ""
authors = ["TayamaYuto <tayama.yuto@icloud.com>"]
readme = "README.md"
packages = [{include = "llm_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
gunicorn = "^21.2.0"
langchain = "^0.0.237"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
